Implement content endpoint
